--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://bootswatch.com/4/litera/bootstrap.min.css">
-    <title>Github Finder</title>
+    <title>Github 使用者搜尋器</title>
 </head>
 <body>
     <nav class="navbar navbar-dark bg-primary mb-3">
@@ -15,9 +15,9 @@
     </nav>
     <div class="container searchContainer">
         <div class="search card card-body">
-            <h1>Search Github Users</h1>
-            <p class="lead">Enter a username to fetch a user profile and repos </p>
-            <input type="text" id="searchUser" class="form-control" placeholder="GitHub Username...">
+            <h1>搜尋Github 使用者</h1>
+            <p class="lead">請輸入使用者名稱</p>
+            <input type="text" id="searchUser" class="form-control" placeholder="GitHub 使用者名稱...">
         </div>
         <br>
         <div id="profile"></div>
